add section && add media && delete imgs

--- a/index.html
+++ b/index.html
@@ -59,6 +59,20 @@
             </p>
         </div>
     </section>
+    <section class="section rome">
+        <div class="centerBlock block4">
+            <p>
+                Римляне считали, что гора Везувий посвящена Геркулесу. Историк Диодор Сицилийский рассказывает о традиции, 
+                что Геркулес, при выполнении своих трудов, проходил недалеко от города Кумы по дороге на Сицилию и нашел там место, 
+                которое называлось «Флегрейские долина»,с холма, который издавна извергал огонь,что сейчас называется Везувий. 
+                С помощью богов он успокоил регион и пошел дальше. 
+                Есть ли какие-то факты в основе традиции - неизвестно, 
+                как и то ли город Геркуланум был назван в честь нее. 
+                Эпиграмма поэта Марциала 88 года н.е позволяет предположить, что и Венера, 
+                патрон Помпей, и Геркулес почитались в регионе, уничтоженном извержением 79 года н.е
+            </p>
+        </div>
+    </section>
 </div>
 <script src="scripts/hoverButt.js"></script>
 <script src="scripts/vanilla-tilt.js"></script>
