--- a/index.html
+++ b/index.html
@@ -36,23 +36,26 @@
         </div>
     </section>
     <section id="vesuvius" class="section">
-        <div class="centerBlock block1">
-            <p> Везувий действующий вулкан на юге Италии, примерно в 15 км от Неаполя. 
+        <div class="centerBlock">
+            <img class="block4" src="images/11.jpg">
+            <p class="p-1"> Везувий действующий вулкан на юге Италии, примерно в 15 км от Неаполя. 
                  Расположен на берегу Неаполитанского залива в провинции Неаполь, регион Кампания. 
                 Входит в Апеннинскую горную систему, имеет высоту 1281 м</p>
         </div>
     </section>
     <section class="section">
-        <div class="centerBlock block2">
-            <p>
+        <div class="centerBlock">
+            <img class="block4" src="images/12.jpg">
+            <p class="p-2">
                 Предположительно вулкан Везувий появился 25000 лет назад в результате столкновения двух тектонических плит. 
                 Следы наиболее древнего из известных извержений датированы 6940 ± 100 годом до н. э
             </p>
         </div>
     </section>
     <section class="section">
-        <div class="centerBlock block3">
-            <p>
+        <div class="centerBlock">
+            <img class="block4" src="images/pompei.jpg">
+            <p class="p-3">
                 В 79 году н. э. произошло одно из самых катастрофических извержений вулкана Везувий близ Неаполя.
                 В результате этого катаклизма погибли несколько тысяч жителей римских городов Помпеи, 
                 Геркуланум и Стабии и нескольких небольших селений и вилл, располагавшихся у самого подножия вулкана
@@ -60,8 +63,9 @@
         </div>
     </section>
     <section class="section rome">
-        <div class="centerBlock block4">
-            <p>
+        <div class="centerBlock">
+            <img class="block4" src="images/rome.jpg">
+            <p class="p-4">
                 Римляне считали, что гора Везувий посвящена Геркулесу. Историк Диодор Сицилийский рассказывает о традиции, 
                 что Геркулес, при выполнении своих трудов, проходил недалеко от города Кумы по дороге на Сицилию и нашел там место, 
                 которое называлось «Флегрейские долина»,с холма, который издавна извергал огонь,что сейчас называется Везувий. 
