--- a/index.html
+++ b/index.html
@@ -4,10 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>THOV | The History of Vesuvius</title>
+    <title> THOV | The History Of Vesuvius</title>
     <link rel="icon" href="images/icon.png">
     <link rel="stylesheet" href="styles/style.css">
-    <link rel="stylesheet" href="styles/media.css">
     <link href="https://fonts.googleapis.com/css?family=Italianno:regular" rel="stylesheet"/>
     <link href="https://fonts.googleapis.com/css?family=Fredoka+One:regular" rel="stylesheet"/>
     <link href="https://fonts.googleapis.com/css2?family=Balsamiq+Sans:ital,wght@1,700&display=swap" rel="stylesheet">
