--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
 <div class="container">
     <section class="section">
-        <h2 class="title vanil">
+        <h2 class="title">
             <span class="title-span1">the</span>
             <span class="title-span2">history of</span>
             <span class="title-span3">Vesuvius</span>
@@ -75,12 +75,5 @@
     </section>
 </div>
 <script src="scripts/hoverButt.js"></script>
-<script src="scripts/vanilla-tilt.js"></script>
-<script type="text/javascript">
-    VanillaTilt.init(document.querySelector(".vanil"), {
-        max: 15,
-        speed: 400
-    });
-</script> 
 </body>
 </html>
