--- a/index.html
+++ b/index.html
@@ -17,34 +17,35 @@
         </section>
         <section>
             <div class="content">
-                <h2>Вулкан Везувий</h2>
-                <p>Везувий действующий вулкан на юге Италии, примерно в 15 км от Неаполя. 
-                    Расположен на берегу Неаполитанского залива в провинции Неаполь, регион Кампания. 
-                   Входит в Апеннинскую горную систему, имеет высоту 1281 м</p>
+                <h2>Vesuvius</h2>
+                <p>Mount Vesuvius is an active volcano in southern Italy, about 15 km from Naples.
+                Located on the shores of the Gulf of Naples in the province of Naples, Campania region.
+                It is part of the Apennine mountain system, the height is 1281 m</p>
             </div>
         </section>
         <section>
             <div class="content">
-                <h2>Возникновение</h2>
-                <p>Предположительно вулкан Везувий появился 25000 лет назад в результате столкновения двух тектонических плит. 
-                    Следы наиболее древнего из известных извержений датированы 6940 ± 100 годом до н. э</p>
+                <h2>Occurrence</h2>
+                <p>Presumably, the Vesuvius volcano appeared 25,000 years ago as a result of the collision of two tectonic plates.</p>
             </div>
         </section>
         <section>
             <div class="content">
-                <h2>Древний Рим</h2>
-                <p> Римляне считали, что гора Везувий посвящена Геркулесу, при выполнении своих трудов он проходил недалеко от города Кумы по дороге на Сицилию и нашел там место, 
-                    которое называлось «Флегрейские долина»(Долина огня), с холма, который издавна извергал огонь, что сейчас называется Везувий. 
-                    С помощью богов он успокоил регион и пошел дальше. 
-                    как и то ли город Геркуланум был назван в честь нее.</p>
+                <h2>Ancient Rome</h2>
+                <p>The Romans believed that Mount Vesuvius was dedicated to Hercules, while performing his labors, he passed near the city of Cuma on the way to Sicily and found a place there,
+                    which was called the Phlegrean Valley (Valley of Fire), from the hill that long ago emitted fire, which is now called Vesuvius.
+                    With the help of the gods, he pacified the region and moved on.
+                    as well as the city of Herculaneum was named after her.
+                </p>
             </div>
         </section>
         <section>
             <div class="content">
-                <h2>Извержение</h2>
-                <p>В 79 году н. э. произошло одно из самых катастрофических извержений вулкана Везувий близ Неаполя.
-                    В результате этого катаклизма погибли несколько тысяч жителей римских городов Помпеи, 
-                    Геркуланум и Стабии и нескольких небольших селений и вилл, располагавшихся у самого подножия вулкана</p>
+                <h2>Eruption</h2>
+                <p>In 79 AD one of the most catastrophic eruptions of the Vesuvius volcano occurred near Naples.
+                    As a result of this cataclysm, several thousand inhabitants of the Roman city of Pompeii died,
+                    Herculaneum and Stabiae and several small villages and villas located at the foot of the volcano
+                </p>
             </div>
         </section>
     </div>
